--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "@types/react-dom": "18.2.7",
     "@uiw/codemirror-extensions-langs": "^4.21.9",
     "@uiw/react-codemirror": "^4.21.9",
+    "deep-equal": "^2.2.2",
+    "fast-deep-equal": "^3.1.3",
+    "json-format": "^1.0.1",
+    "json-to-pretty-yaml": "^1.2.2",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.66.1",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yaml": "^2.3.1"
   }
 }
